--- a/public/stylesheets/style-narrower.css
+++ b/public/stylesheets/style-narrower.css
@@ -227,3 +227,8 @@
 .optional {
 	display: none;
 }
+
+
+.row {
+	text-align: center;
+}
