--- a/public/stylesheets/style-wide.css
+++ b/public/stylesheets/style-wide.css
@@ -10,3 +10,7 @@
 		font-size: 12pt;
 		line-height: 1.8em;
 	}
+
+.row {
+	text-align: left;
+}
